[package]
name = "ulid"
version = "0.1.0"
description = "ULID generation"
authors = ["Tim McNamara <paperless@timmcnamara.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.libc]
version = "0.2"
default-features = false # avoid std

[dev-dependencies]
itertools = "0.10"